@@ -50,11 +50,10 @@ sub mpu_public_regex {
       is_frobenius_pseudoprime
       is_frobenius_underwood_pseudoprime is_frobenius_khashin_pseudoprime
       is_perrin_pseudoprime is_catalan_pseudoprime
-      is_aks_prime is_bpsw_prime
-      is_ramanujan_prime
-      is_mersenne_prime
+      is_aks_prime is_bpsw_prime is_ramanujan_prime is_mersenne_prime
       is_power is_prime_power is_pillai is_semiprime is_square is_polygonal
       is_square_free is_primitive_root is_carmichael is_quasi_carmichael
+      is_fundamental
       sqrtint rootint logint
       miller_rabin_random
       lucas_sequence lucasu lucasv
